# OmniBus-BlockChainCore

./: .gitignore  .miner_pids  API_REFERENCE.md  ARCH_BITCOIN_STORAGE.md  ARCH_FIX_TX_ONLY.md  AUDIT_MOCK_STUB.md  AUDIT_PQ_DETERMINISTIC.md  BEFORE_PUSHING.md  BLOCKCHAIN_DEEP_AUDIT_2026-05-13.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MEMORY.md  COMPARISON_BITCOIN.md  DEVOPS_SETUP.md  DEX_GRID_SPEC.md  Dockerfile  FILES_CREATED.txt  GENESIS_LAUNCH_GUIDE.md  GITEA_ACTIONS_SETUP.md  IBD_DEBUG_STATE.json  KIMI_PROMPT_UTXO.md  MODULES_REFERENCE.md  Makefile  NETWORK_SETUP.md  OMNIBUSAIGENAI.md  PQ_AUDIT_2026-05-06.md  PQ_AUDIT_2026-05-17.md  README.md  SATOSHIWALLETFULLMETADATA.TXT  SETUP.md  STRESS_TEST_AGGREGATE_REPORT_2026-05-10.md  SYSTEM_OVERVIEW.txt  TEST_RESULTS_2026-05-15.md  TEST_SCRIPTS_INVENTORY_2026-05-10.md  TOOLS_INDEX.md  TOOLS_STATUS.md  We-Are-Here-HodLum-WORKER.py  audit-report.json  balances.json  benchmark-results.json  (+41 more)
archived-4-eterniti/gui-qt/: CMakeLists.txt  rebuild.bat
archived-4-eterniti/gui-qt/resources/: omnibus-qt.qrc
archived-4-eterniti/gui-qt/resources/stylesheets/: dark-theme.qss
archived-4-eterniti/gui-qt/src/: main.cpp
archived-4-eterniti/gui-qt/src/core/: CMakeLists.txt  LocalCrypto.cpp  LocalCrypto.h  MultiChain.cpp  MultiChain.h  NodeService.h  (+14 more)
core-cpp/: .gitignore  CMakeLists.txt  LICENSE  README.md
core-cpp/apps/: omnibus-cli.cpp  omnibus-node.cpp
core-cpp/docs/: API.md
core-cpp/include/omnibus/: codec.hpp  dns.hpp  guardian.hpp  types.hpp  vault.hpp
core-cpp/scripts/: run-evm.sh  run-miner.sh  run-seed.sh
core-cpp/src/: dns.cpp  guardian.cpp  vault.cpp
core-cpp/src/agents/: executor.cpp  manager.cpp
core-cpp/src/consensus/: block.cpp  finality.cpp  genesis.cpp  mempool.cpp  pow.cpp  sub_block.cpp
core-cpp/src/crypto/: bech32.cpp  bip32.cpp  keccak.cpp  pq.cpp  ripemd160.cpp  secp256k1.cpp  sha256.cpp
core-cpp/src/dex/: grid.cpp  htlc.cpp  matching.cpp  oracle.cpp
core-cpp/src/governance/: proposal.cpp
core-cpp/src/identity/: did.cpp  kyc.cpp  manifest.cpp  mica.cpp  ns.cpp  salt.cpp
core-cpp/src/light/: bloom.cpp  client.cpp  spv.cpp
core-cpp/src/mining/: engine.cpp  pool.cpp  stratum.cpp
core-cpp/src/p2p/: bootstrap.cpp  node.cpp  peer.cpp  scoring.cpp  sync.cpp  wire.cpp
core-cpp/src/rpc/: eth.cpp  native.cpp  server.cpp
core-cpp/src/shard/: coordinator.cpp  metachain.cpp
core-cpp/src/storage/: chain_db.cpp  compact_tx.cpp  state_trie.cpp
core-cpp/src/validator/: set.cpp  slashing.cpp  staking.cpp
core-cpp/src/wallet/: address.cpp  hd.cpp
core-cpp/src/ws/: server.cpp
core-cpp/tests/: test_consensus.cpp  test_crypto.cpp  test_dex.cpp  test_identity.cpp  test_p2p.cpp  test_validation.cpp  test_vectors.cpp  test_wallet.cpp
core-rust/: Cargo.toml  README.md
core-rust/src/: block_exec.rs  chain.rs  guardian.rs  main.rs  node.rs  state.rs  strategy_registry.rs  tx.rs  types.rs  vault.rs
core-rust/src/agents/: config.rs  executor.rs  manager.rs  mod.rs  tier.rs  wallet.rs
core-rust/src/bridge/: bridge_relay.rs  dex_settler.rs  evm_escrow_watcher.rs  evm_executor.rs  mod.rs
core-rust/src/cli/: commands.rs  common.rs
core-rust/src/consensus/: block.rs  consensus.rs  consensus_rules.rs  finality.rs  genesis.rs  mempool.rs  mod.rs  oracle.rs  slot_calendar.rs  spark_consensus.rs  sub_block.rs
core-rust/src/crypto/: bech32.rs  bip32.rs  mod.rs  pq.rs  ripemd160.rs  secp256k1.rs
core-rust/src/dex/: evm_rpc.rs  evm_signer.rs  grid.rs  htlc.rs  matching.rs  matching_engine.rs  mod.rs  oracle.rs  order.rs  pair.rs  settler.rs
core-rust/src/dns/: mod.rs  registry.rs
core-rust/src/evm/: db.rs  executor.rs  interface.rs  logs.rs  mod.rs  tests.rs
core-rust/src/governance/: mod.rs  proposal.rs  voting.rs
core-rust/src/identity/: did.rs  kyc.rs  manifest.rs  merkle.rs  mica.rs  mod.rs  ns.rs  obm.rs  salt.rs  selective_disclosure.rs
core-rust/src/light/: bloom.rs  client.rs  mod.rs  spv.rs  witness.rs
core-rust/src/mining/: block.rs  engine.rs  light.rs  mod.rs  pool.rs  pow.rs  stratum.rs
core-rust/src/node_lifecycle/: faucet.rs  mempool_verifier.rs  mining_periodic.rs  runtime_init.rs  slot_leader.rs
core-rust/src/p2p/: bootstrap.rs  mod.rs  node.rs  peer.rs  scoring.rs  sync.rs  wire.rs
core-rust/src/rpc/: consensus.rs  eth_methods.rs  mod.rs  native_methods.rs  spark.rs  strategies.rs
core-rust/src/safety/: flags.rs  mod.rs  oracle_blocklist.rs  reporters.rs  reputation.rs  tx_guard.rs
core-rust/src/shard/: coordinator.rs  metachain.rs  mod.rs  subchain.rs
core-rust/src/storage/: archive.rs  codec.rs  compact.rs  database.rs  mod.rs  state_trie.rs
core-rust/src/validator/: mod.rs  set.rs  slashing.rs  staking.rs  staking_engine.rs
core-rust/src/wallet/: address.rs  hd.rs  mod.rs  treasury_agent.rs  wallet_ops.rs
core-rust/src/ws/: broadcaster.rs  events.rs  mod.rs  server.rs
core-rust/tests/: test_vectors.rs
evm/: Cargo.toml  deployed_addresses.json  msvc_compat.c
evm/contracts/: OmnibusHTLC.sol
evm/deploy/: .env.example  .gitignore  DEPLOY-SEPOLIA.bat  README.md  b.js  blocknum.js  bridge_to_liberty.js  bridge_to_scroll.js  bridge_to_soneium.js  buy.js  buy_eth.js  buy_eth_base.js  buy_link_match.js  buy_link_sepolia.js  buy_lock.js  buy_match.js  buy_match_eth.js  buy_match_eth_base.js  buy_match_usdc_base.js  buy_usdc.js  buy_usdc_base_slot1.js  c.js  cancel_link_order.js  check_arc.js  check_base_balances.js  check_base_eth_founder.js  check_base_settle.js  check_base_usdc.js  check_both_chains.js  check_contract_native.js  check_deployer_all.js  check_escrow_state.js  check_eth_settle.js  check_founder_l2.js  check_link_all.js  check_link_all2.js  check_link_order.js  check_minato.js  check_op_nonce.js  check_operator.js  (+32 more)
evm/deploy/contracts/: OmnibusDEX.sol
evm/deploy/scripts/: deploy-omnibus-dex.ts  derive-and-deploy.ts  fund-operator.ts
evm/src/: lib.rs
qt-ada-hybrid/: CMakeLists.txt  test_mini.c  test_vault.c
qt-ada-hybrid/ada-vault/src/: bip39_words.ads  spark_bip32.adb  spark_bip32.ads  spark_mnemonic.adb  spark_secp256k1.adb  spark_sha512.ads
(+12537 files in other folders)
