[package]
name = "omnibus-evm"
version = "0.1.0"
edition = "2021"

[lib]
name = "omnibus_evm"
crate-type = ["staticlib"]

[dependencies]
revm = { version = "14", default-features = false, features = ["std"] }
alloy-primitives = "0.8"
hex = "0.4"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
